--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<p><img src="https://img.icons8.com/material-two-tone/344/google-scholar.png" style="margin-left:35px; width: 25px; height: 25px"><a style="margin-left:5px;" href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
 	<span itemprop="hashtags"> <p style="margin-top:20px; text-align: center; font-size: 14px; color:#428bca;">  #neuromorphic  #wearables #lowpowersystems #tinyML #IoT #ubiquitouscomputing </p> </span>	
 	</div>
-	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8" style="text-align: justify;">
+	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p>Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS, <a href="https://computing.smu.edu.sg/"> Singapore Management University (SMU)</a> advised by 
 <!-- 		<a href ="https://sites.google.com/view/archan-misra"></a>  -->
 		Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at <a href="https://m3s.mit.edu/our-team/hemant-sebbal">Singapore-MIT alliance.</a> </p>
