--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <!-- 		<a href ="https://sites.google.com/view/archan-misra"></a>  -->
 		Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at <a href="https://m3s.mit.edu/our-team/hemant-sebbal">Singapore-MIT alliance.</a> </p>
 <!-- 		(Funded by Singapore-MIT alliance and MoE) -->
-	<p>I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering. Previously, I worked as a Senior Research Assistant at <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
+	<p>I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering. Previously, I worked as a Senior Project Associate at <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
 <!-- 		<a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a> -->
 	</p>
 		<p>I specialize in deep learning for MCUs (tinyML),  low-power embedded systems, digital and analog circuits. My current research broadly encompasses neuromorphic computing (SNNs), low-power wearable sensing systems, and resource-constrained models, exploring their integration into ubiquitous and robotic applications.
