--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		   <li><i>07-2024:</i> Our paper 'D2SR' got accepted in IROS 2024  
 		   <li><i>03-2024:</i> Patent on `Metal Nanoparticles Synthesis` is granted	
 		   <li><i>12-2023:</i> Full paper got accepted at <a href="https://percom.org/2024/full-program/">PerCom 2024 </a> [Acceptance rate: 14.5%]
-		   <li><i>12-2023:</i> Demo paper got accepted at COMSNETS 2024 [Best Demo Award]
+<!-- 		   <li><i>12-2023:</i> Demo paper got accepted at COMSNETS 2024 -->
 	           <li><i>03-2023:</i> A conference paper I co-authered got accepted at ACM MMSys 2023 [Acceptance rate: 25%]
 		   <li><i>07-2022:</i> Journel paper got accepted at IEEE Sensors Journel [Impact factor: 4.3]
 		   <li><i>04-2022:</i> <a href="https://u-bat.github.io/deployment">u-Bat</a> has been planned to deploy for detecting timber logging at Dehing Patkai National Park, Assam, India [IISc, India in collaboration with Wildlife Conservation Society (WCS), India]</li>
