--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="row marketing">
   <p style="font-size: 21px; color: #428bca;">Highlights:</p>
 	
-		<ul>
+<!-- 		<ul>
 		   <li><i>05-2025:</i> Started as a Visiting Student at Singapore-MIT Alliance for Research and Technology Center with <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
 		   <li><i>01-2025:</i> Workshop paper got accepted at <a href="https://sites.google.com/view/comorea25/accepted-papers"> CoMoRea'25 </a> collocated with PerCom 2025
 		   <li><i>08-2024:</i> Joined as a Ph.D. student at SCIS, SMU
@@ -100,7 +100,23 @@
 		   <li><i>11-2021:</i> Video Poster got accepted at <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg">tinyML Asia Technical Forum, 2021</a></li>
 		   <li><i>11-2019:</i> Selected for  <a href="https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/">Massachusetts Institute of Technology (MIT) Hacking Medicine</a>, Grand Hack - 2019, USA</li>
 		   <li><i>10-2019:</i> <a href="https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/">All India Winning Team</a> (won 5000 USD) - Hackware 2019, A Schneider Electric Innovation Challenge</li>
-		</ul>  
+		</ul>   -->
+	<ul>
+	  <li>💼 <i>05-2025:</i> Started as a Visiting Student at Singapore-MIT Alliance for Research and Technology Center with <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group</li>
+	  <li>📄 <i>01-2025:</i> Workshop paper got accepted at <a href="https://sites.google.com/view/comorea25/accepted-papers">CoMoRea'25</a> collocated with PerCom 2025</li>
+	  <li>🎓 <i>08-2024:</i> Joined as a Ph.D. student at SCIS, SMU</li>
+	  <li>📄 <i>07-2024:</i> Our paper ‘D2SR’ got accepted in IROS 2024</li>
+	  <li>📜 <i>03-2024:</i> Patent on <code>Metal Nanoparticles Synthesis</code> is granted</li>
+	  <li>📄 <i>12-2023:</i> Full paper got accepted at <a href="https://percom.org/2024/full-program/">PerCom 2024</a> [Acceptance rate: 14.5%]</li>
+	  <li>📄 <i>03-2023:</i> A conference paper I co-authored got accepted at ACM MMSys 2023 [Acceptance rate: 25%]</li>
+	  <li>📄 <i>07-2022:</i> Journal paper got accepted at IEEE Sensors Journal [Impact factor: 4.3]</li>
+	  <li>🚀 <i>04-2022:</i> <a href="https://u-bat.github.io/deployment">u-Bat</a> was planned for deployment to detect timber logging at Dehing Patkai National Park, Assam, India [IISc & Wildlife Conservation Society collaboration]</li>
+	  <li>📄 <i>01-2022:</i> Our paper got accepted at ISCAS 2022 [Flagship Conference of the IEEE CAS Society]</li>
+	  <li>🎥 <i>11-2021:</i> Video Poster got accepted at <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg">tinyML Asia Technical Forum 2021</a></li>
+	  <li>🏅 <i>11-2019:</i> Selected for <a href="https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/">MIT Hacking Medicine, Grand Hack 2019</a>, USA</li>
+	  <li>🏆 <i>10-2019:</i> <a href="https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/">All India Winning Team</a> (won 5000 USD) – Hackware 2019, Schneider Electric Innovation Challenge</li>
+	</ul>
+
 </div>
 <!-- </div> -->
 
