--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		   <li><i>01-2025:</i> Workshop paper got accepted at <a href="https://sites.google.com/view/comorea25/accepted-papers"> CoMoRea'25 </a> collocated with PerCom 2025
 		   <li><i>08-2024:</i> Joined as a Ph.D. student at SCIS, SMU
 		   <li><i>07-2024:</i> Our paper 'D2SR' got accepted in IROS 2024  
-		   <li><i>03-2024:</i> Patent on `Metal Nanoparticles Synthesis` is granted	
+		   <li><i>03-2024:</i> Patent on 'Metal Nanoparticles Synthesis' is granted	
 		   <li><i>12-2023:</i> Full paper got accepted at <a href="https://percom.org/2024/full-program/">PerCom 2024 </a> [Acceptance rate: 14.5%]
 		   <li><i>12-2023:</i> Demo paper got accepted at COMSNETS 2024
 	           <li><i>03-2023:</i> A conference paper I co-authered got accepted at ACM MMSys 2023 [Acceptance rate: 25%]
@@ -101,21 +101,20 @@
 		   <li><i>11-2019:</i> Selected for  <a href="https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/">Massachusetts Institute of Technology (MIT) Hacking Medicine</a>, Grand Hack - 2019, USA</li>
 		   <li><i>10-2019:</i> <a href="https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/">All India Winning Team</a> (won 5000 USD) - Hackware 2019, A Schneider Electric Innovation Challenge</li>
 		</ul>   -->
-	<ul>
-	  <li>💼 <i>05-2025:</i> Started as a Visiting Student at Singapore-MIT Alliance for Research and Technology Center with <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group</li>
-	  <li>📄 <i>01-2025:</i> Workshop paper got accepted at <a href="https://sites.google.com/view/comorea25/accepted-papers">CoMoRea'25</a> collocated with PerCom 2025</li>
-	  <li>🎓 <i>08-2024:</i> Joined as a Ph.D. student at SCIS, SMU</li>
-	  <li>📄 <i>07-2024:</i> Our paper ‘D2SR’ got accepted in IROS 2024</li>
-	  <li>📜 <i>03-2024:</i> Patent on <code>Metal Nanoparticles Synthesis</code> is granted</li>
-	  <li>📄 <i>12-2023:</i> Full paper got accepted at <a href="https://percom.org/2024/full-program/">PerCom 2024</a> [Acceptance rate: 14.5%]</li>
-	  <li>📄 <i>03-2023:</i> A conference paper I co-authored got accepted at ACM MMSys 2023 [Acceptance rate: 25%]</li>
-	  <li>📄 <i>07-2022:</i> Journal paper got accepted at IEEE Sensors Journal [Impact factor: 4.3]</li>
-	  <li>🚀 <i>04-2022:</i> <a href="https://u-bat.github.io/deployment">u-Bat</a> was planned for deployment to detect timber logging at Dehing Patkai National Park, Assam, India [IISc & Wildlife Conservation Society collaboration]</li>
-	  <li>📄 <i>01-2022:</i> Our paper got accepted at ISCAS 2022 [Flagship Conference of the IEEE CAS Society]</li>
-	  <li>🎥 <i>11-2021:</i> Video Poster got accepted at <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg">tinyML Asia Technical Forum 2021</a></li>
-	  <li>🏅 <i>11-2019:</i> Selected for <a href="https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/">MIT Hacking Medicine, Grand Hack 2019</a>, USA</li>
-	  <li>🏆 <i>10-2019:</i> <a href="https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/">All India Winning Team</a> (won 5000 USD) – Hackware 2019, Schneider Electric Innovation Challenge</li>
-	</ul>
+	💼 *05-2025:* Started as a Visiting Student at Singapore-MIT Alliance for Research and Technology Center with [Mens, Manus and Machina (M3S)](https://m3s.mit.edu/) Group  
+	📄 *01-2025:* Workshop paper got accepted at [CoMoRea’25](https://sites.google.com/view/comorea25/accepted-papers) collocated with PerCom 2025  
+	🎓 *08-2024:* Joined as a Ph.D. student at SCIS, SMU  
+	📄 *07-2024:* Our paper ‘D2SR’ got accepted in IROS 2024  
+	📜 *03-2024:* Patent on `Metal Nanoparticles Synthesis` is granted  
+	📄 *12-2023:* Full paper got accepted at [PerCom 2024](https://percom.org/2024/full-program/) [Acceptance rate: 14.5%]  
+	📄 *03-2023:* A conference paper I co-authored got accepted at ACM MMSys 2023 [Acceptance rate: 25%]  
+	📄 *07-2022:* Journal paper got accepted at IEEE Sensors Journal [Impact factor: 4.3]  
+	🚀 *04-2022:* [u-Bat](https://u-bat.github.io/deployment) was planned for deployment to detect timber logging at Dehing Patkai National Park, Assam, India [IISc & WCS collaboration]  
+	📄 *01-2022:* Our paper got accepted at ISCAS 2022 [Flagship Conference of the IEEE CAS Society]  
+	🎥 *11-2021:* Video Poster got accepted at [tinyML Asia Technical Forum 2021](https://www.youtube.com/watch?v=ZgiX-gDikhg)  
+	🏅 *11-2019:* Selected for [MIT Hacking Medicine, Grand Hack 2019](https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/)  
+	🏆 *10-2019:* [All India Winning Team](https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/) (won 5000 USD) – Hackware 2019, Schneider Electric Innovation Challenge  
+
 
 </div>
 <!-- </div> -->
