--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     📄 <strong>07-2024:</strong> Our paper ‘D2SR’ got accepted in IROS 2024
   </li>
   <li style="margin: 0.5em 0;">
-    📜 <strong>03-2024:</strong> Patent on <code>Metal Nanoparticles Synthesis</code> is granted
+    📜 <strong>03-2024:</strong> Patent on Metal Nanoparticles Synthesis is granted
   </li>
   <li style="margin: 0.5em 0;">
     📄 <strong>12-2023:</strong> Full paper got accepted at <a href="https://percom.org/2024/full-program/">PerCom 2024</a> [Acceptance rate: 14.5%]
