--- a/index.html
+++ b/index.html
@@ -33,6 +33,34 @@
 		  ga('send', 'pageview');
 
 		</script> -->	
+
+	  <style>
+    :root {
+      --link-color:      #DC143C;  /* Crimson */
+      --link-hover:      #B22222;  /* Firebrick */
+      --select-bg:       #F8D7DA;  /* pale red-pink */
+      --select-fore:     #000;     /* keep text readable */
+    }
+
+    a {
+      color: var(--link-color);
+      text-decoration: none;
+    }
+    a:hover,
+    a:focus {
+      color: var(--link-hover);
+      text-decoration: underline;
+    }
+
+    ::selection {
+      background-color: var(--select-bg);
+      color: var(--select-fore);
+    }
+    ::-moz-selection {
+      background-color: var(--select-bg);
+      color: var(--select-fore);
+    }
+  </style>
 </head>
 
 	
