--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p>Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS, <a href="https://computing.smu.edu.sg/"> Singapore Management University (SMU)</a> advised by 
 <!-- 		<a href ="https://sites.google.com/view/archan-misra"></a>  -->
-		Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at M3S, under <a href="https://m3s.mit.edu/our-team/hemant-sebbal">MIT's SMART Program</a></p>
+		Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at<a href="https://m3s.mit.edu/our-team/hemant-sebbal">M3S, under MIT's SMART Program</a></p>
 <!-- 		(Funded by Singapore-MIT alliance and MoE) -->
 	<p>I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering. Previously, I worked as a Senior Project Associate at <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
 <!-- 		<a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a> -->
