--- a/index.html
+++ b/index.html
@@ -1,177 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-	
-	<head>
-	<meta charset="utf-8">
-	<meta name="viewport" width="device-width, initial-scale=1.0">
-	<meta name="description" content="Hemanth's website.">
-	<meta name="author" content="Hemanth Sabbella">
-	<meta property="og:image" content="img/hemanth_percom.jpg" />
-	<!-- favicon
-	<link rel="shortcut icon" href="/img/ico/favicon.png">
-	-->
-	<title>About | Hemanth </title>		
-	<!-- styles -->
-	<link href="/css/bootstrap.css" rel="stylesheet">
-	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
-	<link href="/css/style.css" rel="stylesheet">
-	
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-  <script src="../../assets/js/html5shiv.js"></script>
-  <script src="../../assets/js/respond.min.js"></script>
-	<![endif]-->
-	<!-- google analytics - i will not share this data with google -->
-	<!--
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" width="device-width, initial-scale=1.0">
+  <meta name="description" content="Hemanth's website.">
+  <meta name="author" content="Hemanth Sabbella">
+  <meta property="og:image" content="img/hemanth_percom.jpg" />
+  <title>About | Hemanth </title>
 
-		  ga('create', 'UA-38506466-1', 'jmcglone.com');
-		  ga('send', 'pageview');
+  <!-- styles -->
+  <link href="/css/bootstrap.css" rel="stylesheet">
+  <link href="/css/jumbotron-narrow.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 
-		</script> -->	
-
+  <!-- override link and highlight colors -->
+  <style>
+    :root {
+      --ocean-primary: #0096C7;
+      --ocean-hover:   #006494; /* optional hover shade */
+    }
+    /* make all anchor tags ocean primary */
+    a {
+      color: var(--ocean-primary);
+      text-decoration: none;
+    }
+    a:hover,
+    a:focus {
+      color: var(--ocean-hover);
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
-	
-	<body>
-		<div class="container">
-			
-			<div class="header">
-	<ul class="nav nav-pills pull-right">
-		</a></li>
-		<!-- <li class=""><a href="/projects" title="Projects">Projects</a></li> -->
-		<!-- <li class="passive"><a href="/notes" title="Notes">Notes</a></li> -->
-		<li class=""><a href="/projects" title="Projects" style="text-transform: none;">Projects</a></li>
-		<li class=""><a href="/publications" title="Publications" style="text-transform: none;">Publications</a></li>
-		<li class="passive"><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing" title="CV" style="text-transform: none;">CV</a></li>
-	</ul>
-	<h3 class="text-muted" style="text-transform: none;"><a href="/">Hemanth Sabbella</a></h3>
-</div> <!-- /header -->
+<body>
+  <div class="container">
+    <div class="header">
+      <ul class="nav nav-pills pull-right">
+        <li><a href="/projects" title="Projects" style="text-transform: none;">Projects</a></li>
+        <li><a href="/publications" title="Publications" style="text-transform: none;">Publications</a></li>
+        <li class="passive">
+          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing"
+             title="CV" style="text-transform: none;">CV</a>
+        </li>
+      </ul>
+      <h3 class="text-muted" style="text-transform: none;">
+        <a href="/">Hemanth Sabbella</a>
+      </h3>
+    </div> <!-- /header -->
 
-			
-			<!-- <div class="jumbotron"> -->
-<div class="row marketing">
-	<div class="col-sm-4">
-	<img  class="img-circle avatar" width="200" height="200" alt="Hemanth Sabbella" src="img/hemanth_percom_resized3.jpg">
-	<p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="margin-left:35px; width: 25px; height: 25px"><a style="margin-left:5px;" href="mailto:shrsabbella.2024@phdcs.smu.edu.sg">Email</a></p>
-	<p><img src="https://img.icons8.com/ios-filled/344/linkedin-2--v1.png" style="margin-left:35px; width: 23px; height: 23px;"><a style="margin-left:5px;" href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a></p>
-	<p><img src="https://img.icons8.com/material-two-tone/344/google-scholar.png" style="margin-left:35px; width: 25px; height: 25px"><a style="margin-left:5px;" href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
-	<span itemprop="hashtags"> <p style="margin-top:20px; text-align: center; font-size: 14px; color:#428bca;">  #neuromorphic  #wearables #lowpowersystems #tinyML #IoT #ubiquitouscomputing </p> </span>	
-	</div>
-	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p>Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS, <a href="https://computing.smu.edu.sg/"> Singapore Management University (SMU)</a> advised by 
-<!-- 		<a href ="https://sites.google.com/view/archan-misra"></a>  -->
-		Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at<a href="https://m3s.mit.edu/our-team/hemant-sebbal">M3S, under MIT's SMART Program</a></p>
-<!-- 		(Funded by Singapore-MIT alliance and MoE) -->
-	<p>I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering. Previously, I worked as a Senior Project Associate at <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
-<!-- 		<a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a> -->
-	</p>
-		<p>I specialize in deep learning for MCUs (tinyML),  low-power embedded systems, digital and analog circuits. My current research broadly encompasses neuromorphic computing (SNNs), low-power wearable sensing systems, and resource-constrained models, exploring their integration into ubiquitous and robotic applications.
-		</p>
-<!-- 	<p>I specialize in embedded systems, digital and analog circuits, and machine/deep learning for MCUs. I have been working on tinyML systems, which involve incorporating size-constrained ML models into ultra-low-power wearables and embedded systems. Specifically, my current research interlinks event-driven/neuromorphic computing (SNNs), ultra-low-power hardware design, and soft knitted wearables (like knee braces), while also exploring their integration into robotic applications </p -->
-	<p> In addition to my professional pursuits, I have a passion for photography (Featured in natgeo, you can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>), enjoy reading non-fiction, and have a diverse palette when it comes to food.
-<!-- 	<p style="font-size: 7px;"> <a href="https://g.co/kgs/MDcZQG9"> hemanth who? </a> </p> -->
+    <div class="row marketing">
+      <div class="col-sm-4">
+        <img class="img-circle avatar" width="200" height="200" alt="Hemanth Sabbella"
+             src="img/hemanth_percom_resized3.jpg">
+        <p>
+          <img src="https://img.icons8.com/windows/32/000000/email-open.png"
+               style="margin-left:35px; width:25px; height:25px">
+          <a style="margin-left:5px;" href="mailto:shrsabbella.2024@phdcs.smu.edu.sg">Email</a>
+        </p>
+        <p>
+          <img src="https://img.icons8.com/ios-filled/344/linkedin-2--v1.png"
+               style="margin-left:35px; width:23px; height:23px;">
+          <a style="margin-left:5px;" href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a>
+        </p>
+        <p>
+          <img src="https://img.icons8.com/material-two-tone/344/google-scholar.png"
+               style="margin-left:35px; width:25px; height:25px">
+          <a style="margin-left:5px;" href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&amp;hl=en">
+            Google Scholar
+          </a>
+        </p>
+        <span itemprop="hashtags">
+          <p style="margin-top:20px; text-align:center; font-size:14px; color:var(--ocean-primary);">
+            #neuromorphic  #wearables  #lowpowersystems  #tinyML  #IoT  #ubiquitouscomputing
+          </p>
+        </span>
+      </div>
 
+      <div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
+        <p>
+          Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS,
+          <a href="https://computing.smu.edu.sg/">Singapore Management University (SMU)</a>
+          advised by Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at M3S,
+          under <a href="https://m3s.mit.edu/our-team/hemant-sebbal">MIT's SMART Program</a>
+        </p>
+        <p>
+          I graduated from
+          <span itemprop="affiliation">
+            <a href="https://www.iiitd.ac.in/">IIIT-Delhi</a>
+          </span>
+          with a degree in Electronics and Communications Engineering. Previously, I worked as a
+          Senior Project Associate at <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a>
+          under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
+        </p>
+        <p>
+          I specialize in deep learning for MCUs (tinyML), low-power embedded systems, digital and analog
+          circuits. My current research broadly encompasses neuromorphic computing (SNNs), low-power wearable
+          sensing systems, and resource-constrained models, exploring their integration into ubiquitous and
+          robotic applications.
+        </p>
+        <p>
+          In addition to my professional pursuits, I have a passion for photography (Featured in natgeo, you
+          can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>),
+          enjoy reading non-fiction, and have a diverse palette when it comes to food.
+        </p>
+      </div>
+    </div>
 
+    <div class="row marketing">
+      <!-- changed highlight color here -->
+      <p style="font-size:21px; color:var(--ocean-primary);">Highlights:</p>
+      <ul style="list-style:none; padding:0; margin:0;">
+        <li style="margin:0.5em 0;">
+          💼 <strong>05-2025:</strong> Started as a Visiting Student at Singapore-MIT Alliance for
+          Research and Technology Center with
+          <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
+        </li>
+        <li style="margin:0.5em 0;">
+          📄 <strong>01-2025:</strong> Workshop paper got accepted at
+          <a href="https://sites.google.com/view/comorea25/accepted-papers">CoMoRea’25</a>
+          collocated with PerCom 2025
+        </li>
+        <li style="margin:0.5em 0;">
+          🎓 <strong>08-2024:</strong> Joined as a Ph.D. student at SCIS, SMU
+        </li>
+        <li style="margin:0.5em 0;">
+          📄 <strong>07-2024:</strong> Our paper ‘D2SR’ got accepted in IROS 2024
+        </li>
+        <li style="margin:0.5em 0;">
+          📜 <strong>03-2024:</strong> Patent on Metal Nanoparticles Synthesis is granted
+        </li>
+        <li style="margin:0.5em 0;">
+          📄 <strong>12-2023:</strong> Full paper got accepted at
+          <a href="https://percom.org/2024/full-program/">PerCom 2024</a> [Acceptance rate: 14.5%]
+        </li>
+        <li style="margin:0.5em 0;">
+          📄 <strong>03-2023:</strong> A conference paper I co-authored got accepted at ACM MMSys 2023
+          [Acceptance rate: 25%]
+        </li>
+        <li style="margin:0.5em 0;">
+          📄 <strong>07-2022:</strong> Journal paper got accepted at IEEE Sensors Journal
+          [Impact factor: 4.3]
+        </li>
+        <li style="margin:0.5em 0;">
+          🚀 <strong>04-2022:</strong>
+          <a href="https://u-bat.github.io/deployment">u-Bat</a> was planned for deployment to detect
+          timber logging at Dehing Patkai National Park, Assam, India [IISc & WCS collaboration]
+        </li>
+        <li style="margin:0.5em 0;">
+          📄 <strong>01-2022:</strong> Our paper got accepted at ISCAS 2022 [Flagship Conference of the
+          IEEE CAS Society]
+        </li>
+        <li style="margin:0.5em 0;">
+          🎥 <strong>11-2021:</strong> Video Poster got accepted at
+          <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg">tinyML Asia Technical Forum 2021</a>
+        </li>
+        <li style="margin:0.5em 0;">
+          🏅 <strong>11-2019:</strong> Selected for
+          <a href="https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/">
+            MIT Hacking Medicine, Grand Hack 2019
+          </a>, USA
+        </li>
+        <li style="margin:0.5em 0;">
+          🏆 <strong>10-2019:</strong>
+          <a href="https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/">
+            All India Winning Team
+          </a>
+          – Hackware 2019, Schneider Electric Innovation Challenge
+        </li>
+      </ul>
+    </div>
 
-</p>
-	
-	
-	</div>
-</div>
-<div class="row marketing">
-  <p style="font-size: 21px; color: #428bca;">Highlights:</p>
-	
-<!-- 		<ul>
-		   <li><i>05-2025:</i> Started as a Visiting Student at Singapore-MIT Alliance for Research and Technology Center with <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
-		   <li><i>01-2025:</i> Workshop paper got accepted at <a href="https://sites.google.com/view/comorea25/accepted-papers"> CoMoRea'25 </a> collocated with PerCom 2025
-		   <li><i>08-2024:</i> Joined as a Ph.D. student at SCIS, SMU
-		   <li><i>07-2024:</i> Our paper 'D2SR' got accepted in IROS 2024  
-		   <li><i>03-2024:</i> Patent on 'Metal Nanoparticles Synthesis' is granted	
-		   <li><i>12-2023:</i> Full paper got accepted at <a href="https://percom.org/2024/full-program/">PerCom 2024 </a> [Acceptance rate: 14.5%]
-		   <li><i>12-2023:</i> Demo paper got accepted at COMSNETS 2024
-	           <li><i>03-2023:</i> A conference paper I co-authered got accepted at ACM MMSys 2023 [Acceptance rate: 25%]
-		   <li><i>07-2022:</i> Journel paper got accepted at IEEE Sensors Journel [Impact factor: 4.3]
-		   <li><i>04-2022:</i> <a href="https://u-bat.github.io/deployment">u-Bat</a> has been planned to deploy for detecting timber logging at Dehing Patkai National Park, Assam, India [IISc, India in collaboration with Wildlife Conservation Society (WCS), India]</li>
-		   <li><i>01-2022:</i> Our paper got accepted at ISCAS 2022 [Flagship Conference of the IEEE CAS Society]</li>
-		   <li><i>11-2021:</i> Video Poster got accepted at <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg">tinyML Asia Technical Forum, 2021</a></li>
-		   <li><i>11-2019:</i> Selected for  <a href="https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/">Massachusetts Institute of Technology (MIT) Hacking Medicine</a>, Grand Hack - 2019, USA</li>
-		   <li><i>10-2019:</i> <a href="https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/">All India Winning Team</a> (won 5000 USD) - Hackware 2019, A Schneider Electric Innovation Challenge</li>
-		</ul>   -->
-<ul style="list-style: none; padding: 0; margin: 0;">
-  <li style="margin: 0.5em 0;">
-    💼 <strong>05-2025:</strong> Started as a Visiting Student at Singapore-MIT Alliance for Research and Technology Center with <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
-  </li>
-  <li style="margin: 0.5em 0;">
-    📄 <strong>01-2025:</strong> Workshop paper got accepted at <a href="https://sites.google.com/view/comorea25/accepted-papers">CoMoRea’25</a> collocated with PerCom 2025
-  </li>
-  <li style="margin: 0.5em 0;">
-    🎓 <strong>08-2024:</strong> Joined as a Ph.D. student at SCIS, SMU
-  </li>
-  <li style="margin: 0.5em 0;">
-    📄 <strong>07-2024:</strong> Our paper ‘D2SR’ got accepted in IROS 2024
-  </li>
-  <li style="margin: 0.5em 0;">
-    📜 <strong>03-2024:</strong> Patent on Metal Nanoparticles Synthesis is granted
-  </li>
-  <li style="margin: 0.5em 0;">
-    📄 <strong>12-2023:</strong> Full paper got accepted at <a href="https://percom.org/2024/full-program/">PerCom 2024</a> [Acceptance rate: 14.5%]
-  </li>
-  <li style="margin: 0.5em 0;">
-    📄 <strong>03-2023:</strong> A conference paper I co-authored got accepted at ACM MMSys 2023 [Acceptance rate: 25%]
-  </li>
-  <li style="margin: 0.5em 0;">
-    📄 <strong>07-2022:</strong> Journal paper got accepted at IEEE Sensors Journal [Impact factor: 4.3]
-  </li>
-  <li style="margin: 0.5em 0;">
-    🚀 <strong>04-2022:</strong> <a href="https://u-bat.github.io/deployment">u-Bat</a> was planned for deployment to detect timber logging at Dehing Patkai National Park, Assam, India [IISc & WCS collaboration]
-  </li>
-  <li style="margin: 0.5em 0;">
-    📄 <strong>01-2022:</strong> Our paper got accepted at ISCAS 2022 [Flagship Conference of the IEEE CAS Society]
-  </li>
-  <li style="margin: 0.5em 0;">
-    🎥 <strong>11-2021:</strong> Video Poster got accepted at <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg">tinyML Asia Technical Forum 2021</a>
-  </li>
-  <li style="margin: 0.5em 0;">
-    🏅 <strong>11-2019:</strong> Selected for <a href="https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/">MIT Hacking Medicine, Grand Hack 2019</a>, USA
-  </li>
-  <li style="margin: 0.5em 0;">
-    🏆 <strong>10-2019:</strong> <a href="https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/">All India Winning Team</a> (won 5000 USD) – Hackware 2019, Schneider Electric Innovation Challenge
-  </li>
-</ul>
+    <div class="footer">
+      <div class="row">
+        <div class="col-sm-8">
+          <p><small></small></p>
+        </div>
+        <div class="col-sm-4">
+          <p class="pull-right"><small></small></p>
+        </div>
+      </div>
+    </div> <!-- /footer -->
 
-</div>
-<!-- </div> -->
+  </div> <!-- /container -->
 
-			
-			<div class="footer">
-	<div class="row">
-	<div class="col-sm-8">
-
-	<p><small></small></p>
-	
-	</div>
-	<div class="col-sm-4">
-	<p class="pull-right"><small></small></p>
-	</div>
-	</div>
-</div> <!-- /footer -->
-
-		
-		</div> <!-- /container -->
-	
-	
-		<!-- javascript at the end of the doc so page loads faster -->
-<script src="https://code.jquery.com/jquery.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/library.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
-
-	
-	</body>
-
+  <!-- javascript at the end of the doc so page loads faster -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/library.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
+</body>
 </html>
