--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
         </li>
         <li style="margin:0.5em 0;">
-          📄 <strong>01-2025:</strong> Workshop paper got accepted at
+          📝 <strong>01-2025:</strong> Workshop paper got accepted at
           <a href="https://sites.google.com/view/comorea25/accepted-papers">CoMoRea’25</a>
           collocated with PerCom 2025
         </li>
@@ -124,21 +124,21 @@
           🎓 <strong>08-2024:</strong> Joined as a Ph.D. student at SCIS, SMU
         </li>
         <li style="margin:0.5em 0;">
-          📄 <strong>07-2024:</strong> Our paper ‘D2SR’ got accepted in IROS 2024
+          📝 <strong>07-2024:</strong> Our paper ‘D2SR’ got accepted in IROS 2024
         </li>
         <li style="margin:0.5em 0;">
           📜 <strong>03-2024:</strong> Patent on Metal Nanoparticles Synthesis is granted
         </li>
         <li style="margin:0.5em 0;">
-          📄 <strong>12-2023:</strong> Full paper got accepted at
+          📝 <strong>12-2023:</strong> Full paper got accepted at
           <a href="https://percom.org/2024/full-program/">PerCom 2024</a> [Acceptance rate: 14.5%]
         </li>
         <li style="margin:0.5em 0;">
-          📄 <strong>03-2023:</strong> A conference paper I co-authored got accepted at ACM MMSys 2023
+          📝 <strong>03-2023:</strong> A conference paper I co-authored got accepted at ACM MMSys 2023
           [Acceptance rate: 25%]
         </li>
         <li style="margin:0.5em 0;">
-          📄 <strong>07-2022:</strong> Journal paper got accepted at IEEE Sensors Journal
+          📝 <strong>07-2022:</strong> Journal paper got accepted at IEEE Sensors Journal
           [Impact factor: 4.3]
         </li>
         <li style="margin:0.5em 0;">
@@ -147,7 +147,7 @@
           timber logging at Dehing Patkai National Park, Assam, India [IISc & WCS collaboration]
         </li>
         <li style="margin:0.5em 0;">
-          📄 <strong>01-2022:</strong> Our paper got accepted at ISCAS 2022 [Flagship Conference of the
+          📝 <strong>01-2022:</strong> Our paper got accepted at ISCAS 2022 [Flagship Conference of the
           IEEE CAS Society]
         </li>
         <li style="margin:0.5em 0;">
