--- a/publications/index.html
+++ b/publications/index.html
@@ -53,7 +53,7 @@
     </div> <!-- /header -->
 
     <div class="publications">
-      <a style="font-size: 21px; color: var(--ocean-primary);">Conferences &amp; Journals</a>
+      <p style="font-size: 21px; color: var(--ocean-primary);">Conferences &amp; Journals</p>
       <hr>
 
       <ul style="list-style: none; padding-left: 0;">
@@ -110,7 +110,7 @@
       </ul>
 
       <hr>
-      <a style="font-size: 21px; color: var(--ocean-primary);">Workshops</a>
+      <p style="font-size: 21px; color: var(--ocean-primary);">Workshops</p>
       <hr>
 
       <ul style="list-style: none; padding-left: 0;">
@@ -127,7 +127,7 @@
       </ul>
 
       <hr>
-      <a style="font-size: 21px; color: var(--ocean-primary);">Demos &amp; Posters</a>
+      <p style="font-size: 21px; color: var(--ocean-primary);">Demos &amp; Posters</p>
       <hr>
 
       <ul style="list-style: none; padding-left: 0;">
@@ -154,7 +154,7 @@
       </ul>
 
       <hr>
-      <a style="font-size: 21px; color: var(--ocean-primary);">Patents</a>
+      <p style="font-size: 21px; color: var(--ocean-primary);">Patents</p>
       <hr>
 
       <ul style="list-style: none; padding-left: 0;">
