--- a/publications/index.html
+++ b/publications/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" width="device-width, initial-scale=1.0">
+  <!-- Corrected viewport meta -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Publications">
   <meta name="author" content="Hemanth Sabbella">
   <meta property="og:image" content="img/hemanth_small.jpg" />
@@ -28,13 +29,20 @@
       color: var(--ocean-hover);
       text-decoration: underline;
     }
-  </style>
 
-  <!-- HTML5 shim and Respond.js IE8 support -->
-  <!--[if lt IE 9]>
-    <script src="../../assets/js/html5shiv.js"></script>
-    <script src="../../assets/js/respond.min.js"></script>
-  <![endif]-->
+    /* Mobile-only overrides */
+    @media only screen and (max-width: 768px) {
+      /* Container padding */
+      .container { padding: 0 1rem; }
+
+      /* Reduce side margins on lists */
+      .publications ol { margin-left: 1rem; }
+
+      /* Fluid typography */
+      h1 { font-size: clamp(1.5rem, 5vw, 2.5rem); }
+      p  { font-size: clamp(1rem, 3vw, 1.125rem); }
+    }
+  </style>
 </head>
 
 <body>
