--- a/publications/index.html
+++ b/publications/index.html
@@ -48,23 +48,38 @@
 <body>
   <div class="container">
 
-    <div class="header">
-      <ul class="nav nav-pills pull-right">
-        <li class="passive">
-          <a href="/projects" title="Projects" style="text-transform: none;">Projects</a>
-        </li>
-        <li>
-          <a href="/publications" title="Publications" style="text-transform: none;">Publications</a>
-        </li>
-        <li class="passive">
-          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing"
-             title="CV" style="text-transform: none;">CV</a>
-        </li>
+   <!-- Replace your old <div class="header">…</div> with this: -->
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <!-- Brand and toggle get grouped for mobile -->
+      <div class="navbar-header">
+        <button type="button"
+                class="navbar-toggle collapsed"
+                data-toggle="collapse"
+                data-target="#main-navbar"
+                aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/" style="text-transform: none;">
+          Hemanth Sabella
+        </a>
+      </div>
+
+    <!-- Collect the nav links -->
+    <div class="collapse navbar-collapse" id="main-navbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/projects"      style="text-transform: none;">Projects</a></li>
+        <li><a href="/publications"  style="text-transform: none;">Publications</a></li>
+        <li><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing"
+               style="text-transform: none;">CV</a></li>
       </ul>
-      <h3 class="text-muted" style="text-transform: none;">
-        <a href="/">Hemanth Sabbella</a>
-      </h3>
-    </div> <!-- /header -->
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container -->
+</nav>
+
 
     <div class="publications">
       <p style="font-size: 21px; color: var(--ocean-primary);">Conferences &amp; Journals</p>
