--- a/projects/index.html
+++ b/projects/index.html
@@ -93,7 +93,7 @@
       text-align: center;
       color: var(--ocean-primary);
     }
-    /* … hover effects … */
+    /* …hover effects… */
   </style>
 </head>
 
@@ -114,11 +114,19 @@
         <li><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a></li>
       </ul>
 
-      <h3 class="text-muted"><a href="/">Hemanth Sabbella</a></h3>
-    </div>
+      <h3 class="text-muted" style="text-transform: none;">
+        <a href="/">Hemanth Sabbella</a>
+      </h3>
+    </div> <!-- /header -->
 
     <div class="projects">
-      <!-- … your project galleries … -->
+      <div class="gallery">
+        <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
+          <img src="/img/IMG_0244.jpeg" alt="PA2BLO" width="600" height="500">
+        </a>
+        <div class="desc">PA2BLO</div>
+      </div>
+      <!-- …rest of galleries… -->
     </div>
 
     <div class="footer">
